# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  pyproject.toml
.qwen/: settings.json
caddy/: Caddyfile
mcp/mcp_observability/: pyproject.toml
mcp/mcp_observability/mcp_observability/: __init__.py  __main__.py
nanobot/: Dockerfile  config.json  entrypoint.py  gateway_wrapper.py  pyproject.toml
nanobot/workspace/sessions/: cli_direct.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
